@@ -1,5 +1,9 @@
 2005-03-14  Sam Steingold  <sds@gnu.org>
 
+	* utils/modprep.lisp (string-upcase-verbose): do not upcase strings
+
+2005-03-14  Sam Steingold  <sds@gnu.org>
+
 	* modules/syscalls/calls.c (SET-FILE-STAT): available when at
 	least one of chmod(), chown() and utime() is available
 	(my_chmod, my_chown, my_utime): auxiliaries
